--- a/contract/Cargo.toml
+++ b/contract/Cargo.toml
@@ -1,14 +1,15 @@
 [package]
-name = "hello_near"
+name = "near-nft"
 version = "1.0.0"
 authors = ["Near Inc <hello@near.org>"]
 edition = "2021"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 near-sdk = "4.0.0"
+near-contract-standards = "4.0.0"
 uint = { version = "0.9.3", default-features = false }
 
 [profile.release]
