--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,7 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
-  "Licence": "MIT",
+  "license": "MIT",
   "private": true,
   "dependencies": {
     "buffer": "^6.0.3",
