--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "my-near-app",
   "version": "1.0.0",
-  "license": "(MIT AND Apache-2.0)",
+  "license": "MIT",
   "scripts": {
     "start": "cd frontend && npm run start",
-    "deploy": "cd contract && ./deploy.sh",
+    "deploy:nep171-contract": "cd contract/nep171-contract && ./deploy.sh",
+    "deploy:userinfo-contract": "cd contract/userinfo-contract && ./deploy.sh",
     "build": "npm run build:contract && npm run build:web",
     "build:web": "cd frontend && npm run build",
-    "build:contract": "cd contract && ./build.sh",
+    "build:nep171-contract": "cd contract/nep171-contract && ./build.sh",
+    "build:userinfo-contract": "cd contract/userinfo-contract && ./build.sh",
     "test": "npm run test:unit && npm run test:integration",
     "test:unit": "cd contract && cargo test",
     "test:integration": "cd integration-tests && npm test -- -- \"./contract/target/wasm32-unknown-unknown/release/hello_near.wasm\"",
