--- a/frontend/.env
+++ b/frontend/.env
@@ -7,5 +7,6 @@ REACT_APP_RPC_URL=https://rpc.testnet.near.org
 REACT_APP_WALLET_URL=https://wallet.testnet.near.org
 REACT_APP_HELPER_URL=https://helper.testnet.near.org
 REACT_APP_EXPLORER_URL=https://explorer.testnet.near.org
-REACT_APP_CONTRACT_NAME=guest-book.testnet
+REACT_APP_USERINFO_CONTRACT_NAME=dev-1666100011540-95227225137871
+REACT_APP_NEP171_CONTRACT_NAME=dev-1665936746517-72534883685739
 REACT_APP_LOCALSTORAGE_PREFIX=guest-book
